# set09121_games_engineering_car_crasher

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  readme.md
car_crasher/: background.cpp  background.h  background_manager.cpp  background_manager.h  car_crasher.cpp  car_crasher.h  cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_bkgrd_movement.cpp  cmp_bkgrd_movement.h  cmp_hit_box.cpp  cmp_hit_box.h  cmp_key_binds.cpp  cmp_key_binds.h  cmp_menu.cpp  cmp_menu.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_police_ai_movement.cpp  cmp_police_ai_movement.h  cmp_sound_effect.cpp  cmp_sound_effect.h  cmp_sprite.cpp  cmp_sprite.h  collision_manager.cpp  collision_manager.h  entity.cpp  entity_manager.cpp  entity_manager.h  game_UI_Manager.cpp  game_UI_Manager.h  game_config.h  main.cpp  obstacle_manager.cpp  obstacle_manager.h  obstacles.cpp  obstacles.h  scene.cpp  scene.h  system_renderer.cpp  (+1 more)
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
